--- a/style.css
+++ b/style.css
@@ -1,74 +1,93 @@
-body{
-    height: 100vh;
-    margin: 0;
-    background-image: url('background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: 'Raleway', sans-serif;
+body {
+  height: 100vh;
+  margin: 0;
+  background-image: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-main{
-    padding: 1vw;
+main {
+  padding: 1vw;
 }
 
-.grid-2-1{
-    display: grid;
+.grid-2-1 {
+  display: grid;
 }
 
-
-.grid-2-1{
-    grid-template-columns: 2fr 1fr;
+.grid-2-1 {
+  grid-template-columns: 2fr 1fr;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 1em;
-    padding: 2em;
-    border-radius: 14px;
-    background: rgb(234 234 234);
-    background: #000000d0;
-    color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1em;
+  padding: 2em;
+  background: rgb(234, 234, 234);
+  background: rgba(0, 0, 0, 0.8156862745);
+  color: white;
 }
 
 .input > input {
-    border: none;
-    outline: none;
-    padding: 0.3rem;
-    border-radius: 18px;
-    color: rgb(255 255 255);
-    background: #7c7c7c2b;
-    font-family: 'Raleway', sans-serif;
+  border: none;
+  outline: none;
+  padding: 0.3rem;
+  border-radius: 18px;
+  color: rgb(255, 255, 255);
+  background: rgba(124, 124, 124, 0.168627451);
+  font-family: "Raleway", sans-serif;
 }
 
-.displayWeather{
-    color: #12fbe9;
-    text-shadow: -1px 1px 0 #3795ed,
-                          1px 1px 0 #3795ed,
-                         1px -1px 0 #3795ed,
-                        -1px -1px 0 #3795ed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Raleway', sans-serif;
+.displayWeather {
+  color: #12fbe9;
+  text-shadow: -1px 1px 0 #3795ed, 1px 1px 0 #3795ed, 1px -1px 0 #3795ed, -1px -1px 0 #3795ed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Raleway", sans-serif;
 }
 
-.displayWeather img{
-    width: 100px;
-    height: 100px;
-    margin: -20px;
+.displayWeather img {
+  width: 100px;
+  height: 100px;
+  margin: -20px;
 }
 
-.displayFutureWeather{
-    text-align: center;
-    display: flex;
-    gap: 10px;
-    color: #fd33fa;
-    text-shadow: -1px 1px 0 #a7038b,
-                          1px 1px 0 #a7038b,
-                         1px -1px 0 #a7038b,
-                        -1px -1px 0 #a7038b;
+.displayFutureWeather table {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border-collapse: collapse;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  font-weight: bold;
 }
+.displayFutureWeather table th {
+  padding: 5px;
+}
+
+.displayFutureWeather table .neonheader {
+  background-color: #d300c4;
+  color: #123e7c;
+  font-weight: bolder;
+  text-transform: uppercase;
+  padding: 10px;
+}
+
+.displayFutureWeather table {
+  color: #08bbc6;
+}
+
+.displayFutureWeather tr:hover {
+  background-color: #08bbc6;
+  color: #123e7c;
+} /** Highlights row**/
+.displayFutureWeather table .neonheader tr:hover {
+  background-color: #d300c4 !important;
+  color: #123e7c;
+  font-weight: bolder;
+  text-transform: uppercase;
+  padding: 10px;
+}/*# sourceMappingURL=style.css.map */
