--- a/style.css
+++ b/style.css
@@ -30,6 +30,17 @@ main {
   color: white;
 }
 
+.programcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1em;
+  background: rgb(234, 234, 234);
+  background: rgba(0, 0, 0, 0.8862745098);
+  color: white;
+}
+
 .input > input {
   border: none;
   outline: none;
