--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,17 @@ main{
     color: white;
 }
 
+.programcontainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 1em;
+    background: rgb(234 234 234);
+    background: #000000e2;
+    color: white;
+}
+
 .input > input {
     border: none;
     outline: none;
