--- a/style.scss
+++ b/style.scss
@@ -113,3 +113,13 @@ main{
     text-transform: uppercase;
     padding: 10px;
 }
+
+#headline{
+    a{
+        text-decoration: none;
+        color: #12fbe9;
+        &:hover{
+            color: #d300c4;
+        }
+    }
+}
