--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
+@font-face {
+  font-family: cyberFont;
+  src: url(GlitchGoblin-2O87v.ttf);
+}
 body {
   height: 100vh;
   margin: 0;
+  background-color: black;
   background-image: url("background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "Raleway", sans-serif;
+  font-weight: bolder;
+}
+
+h1 {
+  font-family: cyberFont;
+  color: #d300c4;
+}
+
+h3 {
+  font-size: 2rem;
+  margin: 0.2rem;
 }
 
 main {
@@ -44,20 +61,9 @@ main {
   color: white;
 }
 
-.input > input {
-  border: none;
-  outline: none;
-  padding: 0.3rem;
-  border-radius: 18px;
-  color: rgb(255, 255, 255);
-  background: rgba(124, 124, 124, 0.168627451);
-  font-family: "Raleway", sans-serif;
-}
-
 .displayWeather {
   width: 100%;
-  color: #12fbe9;
-  text-shadow: -1px 1px 0 #3795ed, 1px 1px 0 #3795ed, 1px -1px 0 #3795ed, -1px -1px 0 #3795ed;
+  color: #08bbc6;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -115,7 +121,7 @@ main {
 
 #headline a {
   text-decoration: none;
-  color: #12fbe9;
+  color: #08bbc6;
 }
 #headline a:hover {
   color: #d300c4;
