--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,29 @@
+@font-face {
+    font-family: cyberFont;
+    src: url(GlitchGoblin-2O87v.ttf);
+}
+
 body{
     height: 100vh;
     margin: 0;
+    background-color: black;
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
 }
 
+h1{
+    font-family: cyberFont;
+    color: #d300c4
+}
+
+
+h3{
+    font-size: 2rem;
+    margin: 0.2rem;
+}
 main{
     padding: 1vw;
 }
@@ -45,23 +63,10 @@ main{
     color: white;
 }
 
-.input > input {
-    border: none;
-    outline: none;
-    padding: 0.3rem;
-    border-radius: 18px;
-    color: rgb(255 255 255);
-    background: #7c7c7c2b;
-    font-family: 'Raleway', sans-serif;
-}
 
 .displayWeather{
     width: 100%;
-    color: #12fbe9;
-    text-shadow: -1px 1px 0 #3795ed,
-                  1px 1px 0 #3795ed,
-                  1px -1px 0 #3795ed,
-                 -1px -1px 0 #3795ed;
+    color: #08bbc6;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -117,7 +122,7 @@ main{
 #headline{
     a{
         text-decoration: none;
-        color: #12fbe9;
+        color: #08bbc6;
         &:hover{
             color: #d300c4;
         }
